# evm-state-synchronizer

./: LICENSE  README.md
reader/: index.js  package-lock.json  package.json
reader-go/: go.mod  go.sum  helpers.go  main.go
reader-go/cmd/: dumpFullStorage.go  getStorage.go  root.go
reader-go/helpers/: database.go  tries.go
reader-go/scripts/: run.sh
synchronizer/: Cargo.toml
synchronizer/src/: main.rs
